--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "\"art vandelay\" # \"ART VANDELAY\"\n",
     "\n",
-    "\n"
+    "\"art vandelay\".upper\n"
    ]
   },
   {
