--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,9 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\" # 'Art Vandelay'\n",
+    "\n",
+    "\"art vandelay\".t"
    ]
   },
   {
