--- a/index.ipynb
+++ b/index.ipynb
@@ -189,15 +189,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Art Vandelay'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
     "\n",
-    "\"art vandelay\".t"
+    "\"art vandelay\".title()\n"
    ]
   },
   {
