--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,9 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\" # 'CEO'\n",
+    "\n",
+    "\"Ceo\".upper"
    ]
   },
   {
