--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\" # False\n",
+    "\n"
    ]
   },
   {
