--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "\n",
-    "\"art.vandelay@vandel\""
+    "\"art.vandelay@vandelay.co\".endswith(\".com\")"
    ]
   },
   {
