--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,9 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "'vandelay.com' # 'www.vandelay.com'\n",
+    "\n",
+    "\"www.\""
    ]
   },
   {
