--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,8 @@
    "outputs": [],
    "source": [
     "\"7285553334\" # 7285553335\n",
-    "\n"
+    "\n",
+    "int(\"72\")"
    ]
   },
   {
