--- a/index.ipynb
+++ b/index.ipynb
@@ -314,15 +314,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553335"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"7285553334\" # 7285553335\n",
     "\n",
-    "int(\"72\")"
+    "int(\"7285553334\") + 1"
    ]
   },
   {
