--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,9 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553336"
+    "\"7285553334\" # 7285553336\n",
+    "\n",
+    "int(\"7\")"
    ]
   },
   {
