--- a/index.ipynb
+++ b/index.ipynb
@@ -336,15 +336,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553336"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"7285553334\" # 7285553336\n",
     "\n",
-    "int(\"7\")"
+    "int(\"7285553334\") + 2"
    ]
   },
   {
